refine the UI, refine the code structure

--- a/main.html
+++ b/main.html
@@ -6,14 +6,17 @@
         <link href="style.css" rel="stylesheet"></link>
     </head>
     <body><div id="main-title">
-        LeetCode Digest<br>
-        <div id="github" class=icon>
+        LeetCode Digest
+    </div>
+    <div class="icons">    
+        <div id="github" class="icon">
             <a href="https://github.com/tankgit/LeetCode-Digest-Chrome" target="_blank"><img src="img/github.svg"></a>
         </div>
-        <div id="donate" class=icon>
+        <div id="donate" class="icon">
             <a href="img/qrcode.jpg" target="_blank"><img src="img/donate.png"></a>
         </div>
     </div>
+
         <div id="wrong">
             请先打开一道LeetCode题<br>然后再试！<br>
             <span>(必须是“题目描述”页面)</span>
@@ -55,7 +58,7 @@
             <div id="downloads">
                 <div id="copy" class="btn red"><p>复制为Markdown</p></div>
             </div>
-            <div id="message">copied!</div>
+            <div id="message" class="message">已复制</div>
         </div>
     </body>
     <script src="main.js"></script>
